hphp/hack/test/typecheck/coeffect_encapsulation/require_as.php.exp
File "require_as.php", line 5, characters 8-8:
Context X must declare a context constraint e.g. `as [write_props]` (Parsing[1002])
File "require_as.php", line 6, characters 8-8:
Context Y must declare a context constraint e.g. `as [write_props]` (Parsing[1002])
