hphp/hack/test/typecheck/coeffect_encapsulation/require_as.php
<?hh

<<file:__EnableUnstableFeatures('context_alias_declaration','context_alias_declaration_short')>>

newctx X;
newctx Y = [];
